# docker_log_watcher

./: .age.pub  .gitignore  .sops.yaml  Makefile  README.md  docker_log_watcher.py  pyproject.toml  radarr_api.py  sonarr_api.py
tests/: test_docker_log_watcher.py  test_radarr_api.py  test_sonarr_api.py
